--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
+    "@mui/x-data-grid": "^7.7.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
