--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-API=http://52.202.4.101:8080
-SOCKET_CLIENT=http://127.0.0.1:8080/v1/calculator-websocket
+API=https://calculator-api-ntd-216c6e73b2f9.herokuapp.com
+SOCKET_CLIENT=https://calculator-api-ntd-216c6e73b2f9.herokuapp.com/v1/calculator-websocket
